--- a/groups/composer.json
+++ b/groups/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dajonems\\Groups\\": "src/Groups"
+            "Dakala\\Groups\\": "src/"
         }
     },
     "minimum-stability": "dev"
