--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "zizaco/entrust": " 5.2.x-dev",
-        "cviebrock/eloquent-sluggable": "^3.1",
+        "cviebrock/eloquent-sluggable": "dev-master",
         "baum/baum": "~1.1"
     },
     "autoload": {
